# units

./: .appveyor.yml  .clang-format  .gitmodules  .travis.yml  CMakeLists.txt  LICENCE.md  README.md  distance.h  units.h  utility.h
cmake/: gtest.cmake  gtest.cmake.in
coverage/: CMakeLists.txt
doc/: annotated.html  classes.html  files.html  hierarchy.html  index.html  namespaces.html  namespaceunits.html  structstd_1_1common__type_3_01units_1_1distance_3_01Rep1_00_01Length1_01_4_00_01units_1_1distanc3213b2edb0454368e4de2dcc15205840.html  structstd_1_1common__type_3_01units_1_1distance_3_01Rep1_00_01Length1_01_4_00_01units_1_1distanc5ed2eb36acd45d3c013f7cf491b10afb.html  structstd_1_1distance__common__type-members.html  structstd_1_1distance__common__type.html  structunits_1_1distance-members.html  structunits_1_1distance.html  structunits_1_1is__distance.html  structunits_1_1is__distance_3_01distance_3_01Rep_00_01Length_01_4_01_4.html  units_8h_source.html
doc/search/: all_1.js  classes_0.js
docs/: annotated.html  classes.html  customdoxygen.css  doxy-boot.js  files.html  hierarchy.html  index.html  menudata.js  namespaces.html  namespaceunits.html  structstd_1_1common__type_3_01units_1_1distance_3_01Rep1_00_01Length1_01_4_00_01units_1_1distanc3213b2edb0454368e4de2dcc15205840.html  structstd_1_1common__type_3_01units_1_1distance_3_01Rep1_00_01Length1_01_4_00_01units_1_1distanc5ed2eb36acd45d3c013f7cf491b10afb.html  structstd_1_1common__type_3_01units_1_1distance_3_01_rep1_00_01_length1_01_4_00_01units_1_1dista2c9c38d9d07aa2e25a816f28a0dc2f6a.html  structstd_1_1common__type_3_01units_1_1distance_3_01_rep1_00_01_length1_01_4_00_01units_1_1dista6c5c1d6febe54a88f9d9a66740292143.html  structstd_1_1common__type_3_01units_1_1unit_3_01Rep1_00_01Ratio1_00_01UnitType1_01_4_00_01units_789d4d3d9680b62f3a6967f9e3a1d8c5.html  structstd_1_1common__type_3_01units_1_1unit_3_01Rep1_00_01Ratio1_00_01UnitType1_01_4_00_01units_bc18092259165776d11a01a713894dc0.html  structstd_1_1common__type_3_01units_1_1unit_3_01_rep1_00_01_length1_01_4_00_01units_1_1unit_3_0169e9852b55e8ee7e138d29f4490f0abe.html  structstd_1_1common__type_3_01units_1_1unit_3_01_rep1_00_01_length1_01_4_00_01units_1_1unit_3_01_rep2_00_01_length2_01_4_01_4.html  structstd_1_1common__type_3_01units_1_1unit_3_01_rep1_00_01_ratio1_00_01_unit_type1_01_4_00_01un3a246a455eb42bab7d4ec47b50687fc0.html  structstd_1_1common__type_3_01units_1_1unit_3_01_rep1_00_01_ratio1_00_01_unit_type1_01_4_00_01un68fd234ae4a48f5583e9f58d1a017fe1.html  structstd_1_1distance__common__type-members.html  structstd_1_1distance__common__type.html  structstd_1_1unit__common__type-members.html  structstd_1_1unit__common__type.html  structunits_1_1distance-members.html  structunits_1_1distance.html  structunits_1_1is__distance.html  structunits_1_1is__distance_3_01distance_3_01Rep_00_01Length_01_4_01_4.html  structunits_1_1is__distance_3_01distance_3_01_rep_00_01_length_01_4_01_4.html  structunits_1_1is__distance_3_01unit_3_01Rep_00_01Ratio_00_01UnitType_01_4_01_4.html  structunits_1_1is__distance_3_01unit_3_01_rep_00_01_length_01_4_01_4.html  structunits_1_1is__distance_3_01unit_3_01_rep_00_01_ratio_00_01_unit_type_01_4_01_4.html  structunits_1_1is__unit.html  structunits_1_1is__unit_3_01unit_3_01Rep_00_01Ratio_00_01UnitType_01_4_01_4.html  structunits_1_1is__unit_3_01unit_3_01_rep_00_01_ratio_00_01_unit_type_01_4_01_4.html  structunits_1_1unit-members.html  structunits_1_1unit.html  structunits_1_1unit__type_1_1distance.html  structunits_1_1unit__type_1_1mass.html  units_8h_source.html
docs/search/: all_0.js  all_2.js  all_3.js  all_4.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  search.js  searchdata.js
doxygen/: Doxyfile.in  footer.html  header.html
test/: CMakeLists.txt  test_area.cpp  test_distance.cpp  test_mass.cpp  test_streams.cpp  test_units.cpp
